<resources>
    <string name="app_name">Journey Journal</string>
    <string name="back_to_lgn">Back to login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="es_title">Hearty Welcome to your JourneyJournal</string>
    <string name="es_btnLog">Login</string>
    <string name="es_btnSign">Signup</string>
    <string name="lp_title">Welcome to the Login Page</string>
    <string name="lp_email">Email</string>
    <string name="lp_password">Password</string>
    <string name="lp_button">Login</string>
    <string name="fp_button">Press</string>
    <string name="fp_email">Email</string>
    <string name="userName">UserName</string>
    <string name="lp_Register">Dont have an account?</string>
    <string name="lp_account">Already have an account?</string>
    <string name="lp_Registers">Register</string>
    <string name="rp_logins">Login</string>
    <string name="lp_SignIn">Also Quick SignIn with</string>
    <string name="hello_home_fragment">Hello Home fragment</string>
    <string name="title_home">Home</string>
    <string name="detail">Detail</string>
    <string name="title_profile">Profile</string>
    <string name="args_show_toolbar">showToolBar</string>
    <string name="args_show_bottom_navigation_view">showBottomNavigationView</string>
    <string name="title">Title</string>
    <string name="descriptions">Description</string>
    <string name="dates">MM/DD/YY</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="dlt">Delete</string>
    <string name="edt">Edit</string>
    <string name="email">Email</string>
    <string name="share">Share</string>
    <string name="dashboard">Welcome to your Journal Diary</string>
    <string name="args_show_fab">Floating Action Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>