<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragment.home.CreateFragment"
    android:background="@drawable/home4"
    >

    <ImageView
        android:id="@+id/create_image"
        android:layout_width="150dp"
        android:layout_height="125dp"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_baseline_image_24"
        tools:layout_editor_absoluteX="130dp"
        android:layout_marginTop="16dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/create_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/create_image"
        android:padding="15dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="26sp"
        />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/create_Date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_Title"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="10dp"
        android:padding="15dp"
        android:text="@string/dates"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/create_Title"
        tools:layout_editor_absoluteX="36dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/create_Description"
        android:layout_width="403dp"
        android:layout_height="149dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:text="@string/descriptions"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_Date" />


    <Button
        android:id="@+id/create_btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="288dp"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/ic_baseline_save"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/create_Description" />


</androidx.constraintlayout.widget.ConstraintLayout>